# doughdetective

./: .gitignore  README.md  config.ini.sample  config.json.sample  pyproject.toml
doughdetective/: main.py
