[tool.poetry]
name = "doughdetective"
version = "0.1.0"
description = ""
authors = ["James Gaither <jmgaither@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests-oauthlib = "^1.4.0"
requests-cache = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
